--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=blogger
+server.port=6040
 
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogger
-spring.datasource.username=ocp
+spring.datasource.username=atif
 spring.datasource.password=ocp
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -16,6 +17,18 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 project.image=images/
+
+spring.security.user.name=ocp
+spring.security.user.password=ocp
+spring.security.user.roles=ADMIN
+loging.level.org.springframework.security=DEBUG
+
+
+jwt.secret=G5u9Fq1sT8yH3dP7kM2rL0wXcVbN6zQa
+jwt.expiration=604800000
+
+spring.jpa.properties.hibernate.default_batch_fetch_size=10
+spring.jpa.properties.hibernate.max_fetch_depth=3
 
 
 # spring.datasource.url=jdbc:h2:mem:test
